jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  ports:
  - name: http
    port: 8096
  - name: https
    port: 8920
  selector:
    app: jellyfin
